--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="logic.js"></script>
-    <title>Document</title>
+    <script src="logic.js" defer></script>
+    <title>Rock, Paper, Scissors!</title>
 </head>
 <body>
-    
+    <div class="rock">
+        <button id="Rock">Rock</button>
+    </div>
+    <div class="paper">
+        <button id="Paper">Paper</button>
+    </div>
+    <div class="scissors">
+        <button id="Scissors">Scissors</button>
+    </div>
 </body>
 </html>
