--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     <title>Rock, Paper, Scissors!</title>
 </head>
 <body>
-    <div class="rock">
-        <button id="Rock">Rock</button>
+    <div class="result">
+        
     </div>
-    <div class="paper">
-        <button id="Paper">Paper</button>
+    <div class="options">
+        <div class="rock">
+            <button id="Rock">Rock</button>
+        </div>
+        <div class="paper">
+            <button id="Paper">Paper</button>
+        </div>
+        <div class="scissors">
+            <button id="Scissors">Scissors</button>
+        </div>
     </div>
-    <div class="scissors">
-        <button id="Scissors">Scissors</button>
-    </div>
+    
 </body>
 </html>
