--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>Rock, Paper, Scissors!</title>
 </head>
 <body>
-    <div class="result">
-        
-    </div>
+    <div class="result"></div>
+    <div class="score"></div>
     <div class="options">
         <div class="rock">
             <button id="Rock">Rock</button>
