Add rest button to index.html, Add logic to handle resetting of scores

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
             <button id="Scissors">Scissors</button>
         </div>
     </div>
-    
+    <button id="reset">Reset</button>
 </body>
 </html>
