Add reset button and simple styling for webpage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="logic.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Rock, Paper, Scissors!</title>
 </head>
 <body>
@@ -21,6 +22,9 @@
             <button id="Scissors">Scissors</button>
         </div>
     </div>
-    <button id="reset">Reset</button>
+    <div class="rescore">
+       <button id="reset">Reset</button> 
+    </div>
+    
 </body>
 </html>
