--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Rock, Paper, Scissors!</title>
 </head>
 <body>
+    <div class="header">
+        Rock-Paper-Scissors
+    </div>
     <div class="result"></div>
     <div class="score"></div>
     <div class="options">
